# framework.connectivity.net-config

./: .gitignore  CMakeLists.txt  net-config.manifest  project.config
include/: log.h  mdm-private.h  netdbus.h  neterror.h  netsupplicant.h  network-state.h  network-statistics.h  util.h  wifi-agent.h  wifi-background-scan.h  wifi-ccode.h  wifi-eap-config.h  wifi-eap.h  wifi-firmware.h  wifi-power.h  wifi-powersave.h  wifi-ssid-scan.h  wifi-state.h  wifi-wps.h  wifi.h
interfaces/: netconfig-iface-network-state.xml  netconfig-iface-wifi.xml
mobile/: CMakeLists.txt  net-config.rule
mobile/include/: wifi-power.h
mobile/src/: wifi-power.c
packaging/: net-config.spec
resources/opt/etc/dump.d/module.d/: network_log_dump.sh
resources/usr/lib/systemd/system/: net-config.service
resources/usr/sbin/: net-config.service
src/: main.c  neterror.c  network-state.c  network-statistics.c  signal-handler.c  wifi-agent.c  wifi-background-scan.c  wifi-ccode.c  wifi-eap-config.c  wifi-eap.c  wifi-firmware.c  wifi-indicator.c  wifi-passpoint.c  wifi-power.c  wifi-powersave.c  wifi-ssid-scan.c  wifi-state.c  wifi-wps.c
src/dbus/: netdbus.c  netsupplicant.c
src/utils/: log.c  mdm-private.c  network-accessibility.c  util.c
wearable/: CMakeLists.txt  net-config.manifest
wearable/debian/: changelog  control  net-config.install.in  net-config.postinst  rules
wearable/include/: cellular-state.h  netdbus.h  neterror.h  netsupplicant.h  network-accessibility.h  network-state.h  util.h  wifi-background-scan.h  wifi-passpoint.h  wifi-power.h  wifi-state.h  wifi.h
wearable/interfaces/: netconfig-iface-network-state.xml  netconfig-iface-wifi.xml
wearable/resources/etc/wifi/: ccode.conf
wearable/resources/opt/etc/dump.d/module.d/: network_log_dump.sh
wearable/resources/usr/sbin/: net-config.service
wearable/src/: main.c  network-clock.c  network-state.c  network-statistics.c  signal-handler.c  wifi-agent.c  wifi-background-scan.c  wifi-eap-config.c  wifi-eap.c  wifi-firmware.c  wifi-indicator.c  wifi-passpoint.c  wifi-power.c  wifi-ssid-scan.c  wifi-state.c  wifi-wps.c  wifi.c
wearable/src/dbus/: netdbus.c  netsupplicant.c
wearable/src/utils/: emulator.c  log.c  network-accessibility.c  util.c
